# anp2

./: .envrc.template  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONCEPT.md  CONTRIBUTING.md  README.md  SECURITY.md  STATUS.md
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  capability-proposal.md  spec-discussion.md
.github/workflows/: ci.yml  leak-audit.yml  visibility-watch.yml
datasets/anp2-events/: CITATION.bib  PUBLISH.md  README.md  stats.json
docs/: COMPARISON.md  DEMO_TASK_LIFECYCLE.md  FAQ.md  HACKERS_GUIDE.md  ONBOARDING_AI.md  STATUS.md  positioning.json
docs/CI/: INDEX.md  TEMPLATE.md
docs/PIPs/: PIP-001.md  PIP-002.md  PIP-003.md  PIP-004-appendix-pilot.md  PIP-004-pilot-deployment.md  PIP-004.md  PIP-005.md
docs/arxiv-paper/: anp2-paper.md
docs/blog/: 01-building-first-anp2-agent.md  02-anp2-vs-mcp.md  03-why-ai-needs-its-own-protocol.md  04-trust-without-admins.md  05-anp2-vs-erc8004.md  06-the-economic-layer.md
docs/integrations/: README.md  autogen.md  crewai.md  langchain.md  letta.md  mcp-clients.md  openai-assistants.md  smolagents.md  vercel-ai-sdk.md
hooks/: pre-commit  pre-push
prototypes/anp2-cli/: README.md  pyproject.toml
prototypes/anp2-cli/src/anp2_cli/: __init__.py  __main__.py
prototypes/anp2-client-js/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
prototypes/anp2-client-js/src/: index.ts
prototypes/anp2-cloudflare-worker/: README.md  package.json  wrangler.toml
prototypes/anp2-cloudflare-worker/src/: index.ts
prototypes/anp2-discord-bot/: README.md  bot.py
prototypes/anp2-extension/: .gitignore  README.md  build.mjs  manifest.json  mockup.html  package-lock.json  package.json
prototypes/anp2-extension/src/: background.js
prototypes/anp2-extension/test/: anp2.test.js  autopilot.test.js  e2e.translate.mjs  earn.demo.mjs  economy.test.js  llm.test.js  soak.runaway.mjs  translate.test.js
prototypes/brand/: make_logo.py
prototypes/client/: LICENSE  PORTING.md  README.md  pyproject.toml
prototypes/client/src/anp2_client/: __init__.py  agent.py  crypto.py  pow.py
prototypes/client/tests/: test_client.py
prototypes/dashboard/: index.html
prototypes/hf-dataset/: README.md  events_sample.jsonl
prototypes/hf-space/: README.md  app.py  requirements.txt
prototypes/landing/: JOIN.md  index.html  llms.txt  robots.txt  sitemap.xml  try.html
prototypes/landing/debate/: index.html
prototypes/landing/well-known/: agent-card.json  agents.txt  ai-plugin.json  anp2.json
prototypes/langchain-anp2/: README.md  pyproject.toml
prototypes/langchain-anp2/langchain_anp2/: __init__.py  tools.py
prototypes/langchain-anp2/tests/: test_smoke.py
prototypes/mcp-server/: README.md  glama.json  pyproject.toml  server.json
prototypes/mcp-server/src/anp2_mcp_server/: __init__.py  __main__.py  server.py
prototypes/minimal/: anp2_mini.py
prototypes/nostr-bridge/: README.md  bridge.py
prototypes/quickstart/: README.md  anp2_quickstart.py  pyproject.toml
prototypes/relay/: README.md  pyproject.toml
prototypes/relay/scripts/: anp2-relay.service  deploy.sh
prototypes/relay/src/anp2_relay/: __init__.py  __main__.py  bus.py  crypto.py  events.py  onchain.py  pow.py  server.py  storage.py  trust.py
prototypes/relay/tests/: test_a2a.py  test_basic.py  test_capability_ontology.py  test_concierge_reply.py  test_cors.py  test_credit.py  test_home.py  test_mcp.py  test_phase2_kinds.py  test_pip002_sybil.py  test_pond.py  test_pow_mandatory.py  test_query_aliases.py  test_spam.py  test_task_lifecycle.py  test_trust.py  test_welcome.py
prototypes/seed-agents/: _DESIGN_NEW_AGENTS_2026Q3.md  _demo_e2e.sh  deploy.sh
prototypes/seed-agents/_systemd/: seed-agent.service.tmpl  seed-agent.timer.tmpl
prototypes/seed-agents/catalyst/: catalyst.py
prototypes/seed-agents/citation/: README.md  citation.py
prototypes/seed-agents/concierge/: concierge.py  concierge_post.py
prototypes/seed-agents/demoecho/: demoecho.py
prototypes/seed-agents/echo/: echo.py
prototypes/seed-agents/health/: README.md  health.py
prototypes/seed-agents/heartbeat/: heartbeat.py
prototypes/seed-agents/herald/: deploy.sh  herald.py  herald.service  herald.timer
prototypes/seed-agents/jsonformat/: jsonformat.py
prototypes/seed-agents/market/: README.md  market.py
prototypes/seed-agents/news/: README.md  news.py
prototypes/seed-agents/oracle/: README.md  oracle.py
prototypes/seed-agents/summarize/: summarize.py
prototypes/seed-agents/taskreq/: taskreq.py
prototypes/seed-agents/timenow/: timenow.py
prototypes/seed-agents/translate/: README.md  translate.py
prototypes/seed-agents/verifier/: verifier.py
prototypes/skill-anp2/: SKILL.md
server-config/: Caddyfile
site/: JOIN.md  heartbeat.md  humans.txt  i18n.js  index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml  skill.md  writing.html
site/.well-known/: agent-card.json  agents.txt  ai-agent.json  ai-plugin.json  anp2.json  openapi.json  positioning.json  positioning.schema.json  security.txt
site/share/: blog-05.html  compare.html  faq.html  hackers-guide.html  pip-001.html  pip-002.html  positioning.html  reference-agent.html
site/try/: index.html
spec/: PROTOCOL.md
spec/capabilities/: README.md  anp2.cap.v1.json  meta.health.v1.json  translate.ja_en.v1.json  verify.translation.v1.json  vision.ocr.document.japanese.v1.json
tools/: account_health.py  anp2_chrome_launch.sh  anp2_image_gen.py  anp2_openai_image.py  aws_safe.sh  caddy_apply.sh  commit.sh  community_watch.py  crawler_log_audit.py  defense_build_override_issue.sh  defense_integrity.sh  flag_risk_check.sh  followup_check.py  gh_safe.sh  git_safe.sh  leak_audit.py  publish_safe.sh  push.sh  relay_health_audit.py  scrape_safe.sh  scrub_history.sh  service_catalog.json  service_discovery.sh  service_research.sh  smtp_safe.sh  socks_scope_check.sh  sync_landing.sh  sync_public_docs.sh  totp.sh
tools/dev-env/: git
tools/systemd/: anp2-health-audit.service  anp2-health-audit.timer
(+17 files in other folders)
