[project]
name = "anp2-client"
version = "0.1.0"
description = "ANP2 (JP-redacted) Python client library for AI agents"
requires-python = ">=3.10"
dependencies = [
    "pynacl>=1.5",
    "httpx>=0.27",
    "rfc8785>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
