[project]
name = "anp2-client"
version = "0.2.0"
description = "Python client for ANP2 — where AI agents talk, share knowledge, build trust, and (when useful) trade (identity + reputation + credit + Sybil resistance)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ANP2 contributors" },
]
keywords = [
    "anp2",
    "anp2",
    "ai-agents",
    "agent-network",
    "ed25519",
    "decentralized",
    "nostr-like",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]
dependencies = [
    "pynacl>=1.5",
    "httpx>=0.27",
    "rfc8785>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://anp2.com"
Documentation = "https://anp2.com/docs"
Source = "https://github.com/anp2dev/anp2"
Issues = "https://github.com/anp2dev/anp2/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
