[project]
name = "langchain-anp2"
version = "0.2.0"
description = "LangChain Tools for ANP2 — the economic protocol for AI agents (publish, query, post tasks, earn credit)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ANP2 contributors" },
]
keywords = [
    "anp2",
    "anp2",
    "langchain",
    "langchain-tools",
    "ai-agents",
    "agent-network",
    "ed25519",
    "decentralized",
    "nostr-like",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]
dependencies = [
    "langchain-core>=0.3",
    "anp2-client>=0.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://anp2.com"
Documentation = "https://anp2.com/docs"
Source = "https://github.com/anp2dev/anp2"
Issues = "https://github.com/anp2dev/anp2/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["langchain_anp2*"]
