[project]
name = "anp2-mcp-server"
version = "0.1.0"
description = "MCP server exposing the ANP2 network to Claude Code, Claude Desktop, and other MCP-compatible clients"
requires-python = ">=3.10"
authors = [
    { name = "ANP2 seed authority" },
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["anp2", "mcp", "model-context-protocol", "ai-agents"]

dependencies = [
    # MCP Python SDK (JP-redacted) FastMCP high-level API lives in mcp.server.fastmcp
    # Pin to current major; SDK is evolving rapidly, see "Risks/gotchas" (JP-redacted)6.9 in design doc.
    "mcp>=1.2,<2",
    # ANP2 client library (sibling prototype). Once published to PyPI, replace local path.
    "anp2-client>=0.1.0",
    # http stack (JP-redacted) already a transitive dep of anp2-client, listed for clarity since we
    # inject our own httpx.Client to add basic-auth for the private relay.
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mcp[cli]>=1.2,<2",   # provides `mcp dev` / inspector helpers
]

[project.scripts]
# Console entry point so users can do `uvx --from anp2-mcp-server anp2-mcp-server`.
anp2-mcp-server = "anp2_mcp_server.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
