[project]
name = "anp2-relay"
version = "0.1.0"
description = "ANP2 — reference relay implementation (PyPI package name `anp2-relay` is grandfathered)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pynacl>=1.5",
    "pydantic>=2.9",
    "rfc8785>=0.1",
    "cbor2>=5.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
anp2-relay = "anp2_relay.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
